[package]
name = "counter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.5.1"
borsh-derive = "1.5.1"
solana-program = "2.0.9"

[dev-dependencies]
solana-program-test = "2.0.9"
solana-sdk = "2.0.9"